--- a/RSA_PIPELINE_CPU/RSA_PIPELINE_CPU.qsf
+++ b/RSA_PIPELINE_CPU/RSA_PIPELINE_CPU.qsf
@@ -94,4 +94,6 @@ set_global_assignment -name EDA_TEST_BENCH_FILE TB_TOP.sv -section_id TB_TOP
 set_global_assignment -name EDA_TEST_BENCH_FILE TB_DMEM.sv -section_id TB_DMEM
 set_global_assignment -name EDA_TEST_BENCH_FILE data_mem_init.dat -section_id TB_DMEM
 set_global_assignment -name EDA_TEST_BENCH_FILE TB_ALU.sv -section_id TB_ALU
+set_global_assignment -name SYSTEMVERILOG_FILE segment_ex_mem.sv
+set_global_assignment -name SYSTEMVERILOG_FILE segment_mem_wb.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
