--- a/RSA_PIPELINE_CPU/RSA_PIPELINE_CPU.qsf
+++ b/RSA_PIPELINE_CPU/RSA_PIPELINE_CPU.qsf
@@ -95,4 +95,5 @@ set_global_assignment -name SYSTEMVERILOG_FILE segment_if_id.sv
 set_global_assignment -name SYSTEMVERILOG_FILE segment_id_ex.sv
 set_global_assignment -name SYSTEMVERILOG_FILE segment_ex_mem.sv
 set_global_assignment -name SYSTEMVERILOG_FILE segment_mem_wb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE cond_unit2.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
