--- a/RSA_PIPELINE_CPU - Sin CondLogic/RSA_PIPELINE_CPU.qsf
+++ b/RSA_PIPELINE_CPU - Sin CondLogic/RSA_PIPELINE_CPU.qsf
@@ -100,4 +100,5 @@ set_global_assignment -name SYSTEMVERILOG_FILE TB_ALU.sv
 set_global_assignment -name SYSTEMVERILOG_FILE cond_unit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE cond_unit2.sv
 set_global_assignment -name SYSTEMVERILOG_FILE condcheck.sv
+set_global_assignment -name SYSTEMVERILOG_FILE pc_control_unit.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
