--- a/RSA_PIPELINE_CPU - Refactor/RSA_PIPELINE_CPU.qsf
+++ b/RSA_PIPELINE_CPU - Refactor/RSA_PIPELINE_CPU.qsf
@@ -99,8 +99,5 @@ set_global_assignment -name SYSTEMVERILOG_FILE TB_ALU.sv
 set_location_assignment PIN_Y24 -to reset
 set_location_assignment PIN_W24 -to start
 set_location_assignment PIN_V11 -to clk
-set_location_assignment PIN_W15 -to result[0]
-set_location_assignment PIN_AA24 -to result[1]
-set_location_assignment PIN_V16 -to result[2]
-set_location_assignment PIN_V15 -to result[3]
+set_location_assignment PIN_AE26 -to FlagZero
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
