--- a/RSA_PIPELINE_CPU - Refactor/RSA_PIPELINE_CPU.qsf
+++ b/RSA_PIPELINE_CPU - Refactor/RSA_PIPELINE_CPU.qsf
@@ -70,6 +70,14 @@ set_global_assignment -name EDA_TEST_BENCH_FILE TB_TOP.sv -section_id TB_TOP
 set_global_assignment -name EDA_TEST_BENCH_FILE TB_DMEM.sv -section_id TB_DMEM
 set_global_assignment -name EDA_TEST_BENCH_FILE data_mem_init.dat -section_id TB_DMEM
 set_global_assignment -name EDA_TEST_BENCH_FILE TB_ALU.sv -section_id TB_ALU
+set_location_assignment PIN_Y24 -to reset
+set_location_assignment PIN_W24 -to start
+set_location_assignment PIN_V11 -to clk
+set_location_assignment PIN_AE26 -to FlagZero
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE uart/uart_tx.sv
+set_global_assignment -name SYSTEMVERILOG_FILE uart/uart_rx.sv
+set_global_assignment -name SYSTEMVERILOG_FILE uart/uart.sv
 set_global_assignment -name LICENSE_FILE inst_mem_init.dat
 set_global_assignment -name LICENSE_FILE data_mem_init.dat
 set_global_assignment -name SYSTEMVERILOG_FILE top.sv
@@ -96,8 +104,3 @@ set_global_assignment -name SYSTEMVERILOG_FILE clockDivider.sv
 set_global_assignment -name SYSTEMVERILOG_FILE TB_TOP.sv
 set_global_assignment -name SYSTEMVERILOG_FILE TB_DMEM.sv
 set_global_assignment -name SYSTEMVERILOG_FILE TB_ALU.sv
-set_location_assignment PIN_Y24 -to reset
-set_location_assignment PIN_W24 -to start
-set_location_assignment PIN_V11 -to clk
-set_location_assignment PIN_AE26 -to FlagZero
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
