--- a/RSA_PIPELINE_CPU - Refactor/RSA_PIPELINE_CPU.qsf
+++ b/RSA_PIPELINE_CPU - Refactor/RSA_PIPELINE_CPU.qsf
@@ -70,13 +70,19 @@ set_global_assignment -name EDA_TEST_BENCH_FILE TB_TOP.sv -section_id TB_TOP
 set_global_assignment -name EDA_TEST_BENCH_FILE TB_DMEM.sv -section_id TB_DMEM
 set_global_assignment -name EDA_TEST_BENCH_FILE data_mem_init.dat -section_id TB_DMEM
 set_global_assignment -name EDA_TEST_BENCH_FILE TB_ALU.sv -section_id TB_ALU
+set_location_assignment PIN_Y24 -to reset
+set_location_assignment PIN_W24 -to start
+set_location_assignment PIN_V11 -to clk
+set_location_assignment PIN_AE26 -to FlagZero
+set_global_assignment -name SYSTEMVERILOG_FILE instr_mem.sv
 set_global_assignment -name LICENSE_FILE inst_mem_init.dat
+set_global_assignment -name SYSTEMVERILOG_FILE data_mem.sv
 set_global_assignment -name LICENSE_FILE data_mem_init.dat
 set_global_assignment -name SYSTEMVERILOG_FILE top.sv
-set_global_assignment -name SYSTEMVERILOG_FILE arm.sv
+set_global_assignment -name SYSTEMVERILOG_FILE pipelined_processor.sv
+set_global_assignment -name SYSTEMVERILOG_FILE control_unit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE pc_control_unit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE condcheck.sv
-set_global_assignment -name SYSTEMVERILOG_FILE control_unit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE datapath.sv
 set_global_assignment -name SYSTEMVERILOG_FILE segment_if_id.sv
 set_global_assignment -name SYSTEMVERILOG_FILE segment_id_ex.sv
@@ -86,8 +92,6 @@ set_global_assignment -name SYSTEMVERILOG_FILE regfile.sv
 set_global_assignment -name SYSTEMVERILOG_FILE arith_unit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE alu_defs.sv
 set_global_assignment -name SYSTEMVERILOG_FILE alu.sv
-set_global_assignment -name SYSTEMVERILOG_FILE dmem.sv
-set_global_assignment -name SYSTEMVERILOG_FILE imem.sv
 set_global_assignment -name SYSTEMVERILOG_FILE mux2.sv
 set_global_assignment -name SYSTEMVERILOG_FILE flopr.sv
 set_global_assignment -name SYSTEMVERILOG_FILE flopenr.sv
@@ -96,8 +100,4 @@ set_global_assignment -name SYSTEMVERILOG_FILE clockDivider.sv
 set_global_assignment -name SYSTEMVERILOG_FILE TB_TOP.sv
 set_global_assignment -name SYSTEMVERILOG_FILE TB_DMEM.sv
 set_global_assignment -name SYSTEMVERILOG_FILE TB_ALU.sv
-set_location_assignment PIN_Y24 -to reset
-set_location_assignment PIN_W24 -to start
-set_location_assignment PIN_V11 -to clk
-set_location_assignment PIN_AE26 -to FlagZero
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
