--- a/RSA_PIPELINE_CPU - Refactor/RSA_PIPELINE_CPU.qsf
+++ b/RSA_PIPELINE_CPU - Refactor/RSA_PIPELINE_CPU.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEBA6U23I7
-set_global_assignment -name TOP_LEVEL_ENTITY uart_tx
+set_global_assignment -name TOP_LEVEL_ENTITY TOP_spi
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 21.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "22:28:57  OCTOBER 04, 2022"
 set_global_assignment -name LAST_QUARTUS_VERSION "21.1.0 Lite Edition"
@@ -51,7 +51,7 @@ set_global_assignment -name EDA_SIMULATION_TOOL "Questa Intel FPGA (SystemVerilo
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "SYSTEMVERILOG HDL" -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH uart_tx_tb -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH spi_master_tb -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME TB_TOP -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id TB_TOP
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME TB_TOP -section_id TB_TOP
@@ -61,10 +61,8 @@ set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME TB_DMEM -section_id TB_DM
 set_global_assignment -name EDA_TEST_BENCH_NAME TB_ALU -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id TB_ALU
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME TB_ALU -section_id TB_ALU
-set_location_assignment PIN_Y24 -to reset
 set_location_assignment PIN_W24 -to start
 set_location_assignment PIN_V11 -to clk
-set_location_assignment PIN_AE26 -to FlagZero
 set_global_assignment -name SYSTEMVERILOG_FILE uart/uart.sv
 set_global_assignment -name SYSTEMVERILOG_FILE uart/uart_rx.sv
 set_global_assignment -name SYSTEMVERILOG_FILE uart/uart_tx.sv
@@ -102,6 +100,11 @@ set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME uart_rx_tb -section_id ua
 set_global_assignment -name EDA_TEST_BENCH_NAME uart_tx_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id uart_tx_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME uart_tx_tb -section_id uart_tx_tb
+set_global_assignment -name SYSTEMVERILOG_FILE uart/spi_master.sv
+set_global_assignment -name SYSTEMVERILOG_FILE uart/spi_master_tb.sv
+set_global_assignment -name EDA_TEST_BENCH_NAME spi_master_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id spi_master_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME spi_master_tb -section_id spi_master_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE data_mem_init.dat -section_id TB_TOP
 set_global_assignment -name EDA_TEST_BENCH_FILE inst_mem_init.dat -section_id TB_TOP
 set_global_assignment -name EDA_TEST_BENCH_FILE TB_TOP.sv -section_id TB_TOP
@@ -110,7 +113,20 @@ set_global_assignment -name EDA_TEST_BENCH_FILE data_mem_init.dat -section_id TB
 set_global_assignment -name EDA_TEST_BENCH_FILE TB_ALU.sv -section_id TB_ALU
 set_global_assignment -name EDA_TEST_BENCH_FILE uart/testbench/uart_rx_tb.sv -section_id uart_rx_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE uart/testbench/uart_tx_tb.sv -section_id uart_tx_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE uart/spi_master_tb.sv -section_id spi_master_tb
+set_global_assignment -name EDA_TEST_BENCH_NAME SPI_master_v2_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id SPI_master_v2_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME SPI_master_v2_tb -section_id SPI_master_v2_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE uart/SPI_master_v2_tb.sv -section_id SPI_master_v2_tb
+set_location_assignment PIN_Y24 -to rst
+set_location_assignment PIN_AE26 -to busy
+set_global_assignment -name SYSTEMVERILOG_FILE uart/TOP_spi.sv
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_location_assignment PIN_AF28 -to data_out[2]
+set_location_assignment PIN_AD26 -to data_out[3]
+set_location_assignment PIN_AF27 -to data_out[1]
+set_location_assignment PIN_AH27 -to data_out[0]
+set_location_assignment PIN_V15 -to valid_data
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
