--- a/RSA_PIPELINE_CPU/RSA_PIPELINE_CPU.qsf
+++ b/RSA_PIPELINE_CPU/RSA_PIPELINE_CPU.qsf
@@ -64,12 +64,6 @@ set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME TB_DMEM -section_id TB_DM
 set_global_assignment -name EDA_TEST_BENCH_NAME TB_ALU -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id TB_ALU
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME TB_ALU -section_id TB_ALU
-set_global_assignment -name EDA_TEST_BENCH_FILE data_mem_init.dat -section_id TB_TOP
-set_global_assignment -name EDA_TEST_BENCH_FILE inst_mem_init.dat -section_id TB_TOP
-set_global_assignment -name EDA_TEST_BENCH_FILE TB_TOP.sv -section_id TB_TOP
-set_global_assignment -name EDA_TEST_BENCH_FILE TB_DMEM.sv -section_id TB_DMEM
-set_global_assignment -name EDA_TEST_BENCH_FILE data_mem_init.dat -section_id TB_DMEM
-set_global_assignment -name EDA_TEST_BENCH_FILE TB_ALU.sv -section_id TB_ALU
 set_location_assignment PIN_Y24 -to reset
 set_location_assignment PIN_W24 -to start
 set_location_assignment PIN_V11 -to clk
@@ -100,4 +94,11 @@ set_global_assignment -name SYSTEMVERILOG_FILE clockDivider.sv
 set_global_assignment -name SYSTEMVERILOG_FILE TB_TOP.sv
 set_global_assignment -name SYSTEMVERILOG_FILE TB_DMEM.sv
 set_global_assignment -name SYSTEMVERILOG_FILE TB_ALU.sv
+set_global_assignment -name EDA_TEST_BENCH_FILE data_mem_init.dat -section_id TB_TOP
+set_global_assignment -name EDA_TEST_BENCH_FILE inst_mem_init.dat -section_id TB_TOP
+set_global_assignment -name EDA_TEST_BENCH_FILE TB_TOP.sv -section_id TB_TOP
+set_global_assignment -name EDA_TEST_BENCH_FILE TB_DMEM.sv -section_id TB_DMEM
+set_global_assignment -name EDA_TEST_BENCH_FILE data_mem_init.dat -section_id TB_DMEM
+set_global_assignment -name EDA_TEST_BENCH_FILE TB_ALU.sv -section_id TB_ALU
+set_location_assignment PIN_W15 -to EndFlag
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
