--- a/RSA_PIPELINE_CPU/RSA_PIPELINE_CPU.qsf
+++ b/RSA_PIPELINE_CPU/RSA_PIPELINE_CPU.qsf
@@ -101,4 +101,5 @@ set_global_assignment -name EDA_TEST_BENCH_FILE TB_DMEM.sv -section_id TB_DMEM
 set_global_assignment -name EDA_TEST_BENCH_FILE data_mem_init.dat -section_id TB_DMEM
 set_global_assignment -name EDA_TEST_BENCH_FILE TB_ALU.sv -section_id TB_ALU
 set_location_assignment PIN_W15 -to EndFlag
+set_global_assignment -name SYSTEMVERILOG_FILE interpreter_comunication.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
