--- a/RSA_PIPELINE_CPU/RSA_PIPELINE_CPU.qsf
+++ b/RSA_PIPELINE_CPU/RSA_PIPELINE_CPU.qsf
@@ -102,4 +102,9 @@ set_global_assignment -name EDA_TEST_BENCH_FILE data_mem_init.dat -section_id TB
 set_global_assignment -name EDA_TEST_BENCH_FILE TB_ALU.sv -section_id TB_ALU
 set_location_assignment PIN_W15 -to EndFlag
 set_global_assignment -name SYSTEMVERILOG_FILE interpreter_comunication.sv
+set_location_assignment PIN_V12 -to ReadDataOut[0]
+set_location_assignment PIN_E8 -to ReadDataOut[1]
+set_location_assignment PIN_W12 -to ReadDataOut[2]
+set_location_assignment PIN_AA11 -to clk_out
+set_location_assignment PIN_D11 -to ReadDataOut[3]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
