--- a/RSA_PIPELINE_CPU - Refactor/RSA_PIPELINE_CPU.qsf
+++ b/RSA_PIPELINE_CPU - Refactor/RSA_PIPELINE_CPU.qsf
@@ -130,3 +130,5 @@ set_location_assignment PIN_AF27 -to data_out[1]
 set_location_assignment PIN_AH27 -to data_out[0]
 set_location_assignment PIN_V15 -to valid_data
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE nand/uart_rx.sv
+set_global_assignment -name SYSTEMVERILOG_FILE nand/uart_tx.sv
