--- a/RSA_PIPELINE_CPU/RSA_PIPELINE_CPU.qsf
+++ b/RSA_PIPELINE_CPU/RSA_PIPELINE_CPU.qsf
@@ -50,7 +50,7 @@ set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim (SystemVerilog)"
+set_global_assignment -name EDA_SIMULATION_TOOL "Questa Intel FPGA (SystemVerilog)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "SYSTEMVERILOG HDL" -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
@@ -66,8 +66,21 @@ set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id TB_ALU
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME TB_ALU -section_id TB_ALU
 set_location_assignment PIN_Y24 -to reset
 set_location_assignment PIN_W24 -to start
-set_location_assignment PIN_V11 -to clk
 set_location_assignment PIN_AE26 -to FlagZero
+set_global_assignment -name EDA_TEST_BENCH_FILE data_mem_init.dat -section_id TB_TOP
+set_global_assignment -name EDA_TEST_BENCH_FILE inst_mem_init.dat -section_id TB_TOP
+set_global_assignment -name EDA_TEST_BENCH_FILE TB_TOP.sv -section_id TB_TOP
+set_global_assignment -name EDA_TEST_BENCH_FILE TB_DMEM.sv -section_id TB_DMEM
+set_global_assignment -name EDA_TEST_BENCH_FILE data_mem_init.dat -section_id TB_DMEM
+set_global_assignment -name EDA_TEST_BENCH_FILE TB_ALU.sv -section_id TB_ALU
+set_location_assignment PIN_W15 -to EndFlag
+set_location_assignment PIN_V12 -to ReadDataOut[0]
+set_location_assignment PIN_E8 -to ReadDataOut[1]
+set_location_assignment PIN_W12 -to ReadDataOut[2]
+set_location_assignment PIN_AA11 -to clk_out
+set_location_assignment PIN_D11 -to ReadDataOut[3]
+set_location_assignment PIN_V11 -to clk_FPGA
+set_global_assignment -name SYSTEMVERILOG_FILE clock_manager.sv
 set_global_assignment -name SYSTEMVERILOG_FILE instr_mem.sv
 set_global_assignment -name LICENSE_FILE inst_mem_init.dat
 set_global_assignment -name SYSTEMVERILOG_FILE data_mem.sv
@@ -94,17 +107,9 @@ set_global_assignment -name SYSTEMVERILOG_FILE clockDivider.sv
 set_global_assignment -name SYSTEMVERILOG_FILE TB_TOP.sv
 set_global_assignment -name SYSTEMVERILOG_FILE TB_DMEM.sv
 set_global_assignment -name SYSTEMVERILOG_FILE TB_ALU.sv
-set_global_assignment -name EDA_TEST_BENCH_FILE data_mem_init.dat -section_id TB_TOP
-set_global_assignment -name EDA_TEST_BENCH_FILE inst_mem_init.dat -section_id TB_TOP
-set_global_assignment -name EDA_TEST_BENCH_FILE TB_TOP.sv -section_id TB_TOP
-set_global_assignment -name EDA_TEST_BENCH_FILE TB_DMEM.sv -section_id TB_DMEM
-set_global_assignment -name EDA_TEST_BENCH_FILE data_mem_init.dat -section_id TB_DMEM
-set_global_assignment -name EDA_TEST_BENCH_FILE TB_ALU.sv -section_id TB_ALU
-set_location_assignment PIN_W15 -to EndFlag
 set_global_assignment -name SYSTEMVERILOG_FILE interpreter_comunication.sv
-set_location_assignment PIN_V12 -to ReadDataOut[0]
-set_location_assignment PIN_E8 -to ReadDataOut[1]
-set_location_assignment PIN_W12 -to ReadDataOut[2]
-set_location_assignment PIN_AA11 -to clk_out
-set_location_assignment PIN_D11 -to ReadDataOut[3]
+set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_timing
+set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
+set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
+set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
