--- a/RSA_PIPELINE_CPU/RSA_PIPELINE_CPU.qsf
+++ b/RSA_PIPELINE_CPU/RSA_PIPELINE_CPU.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEBA6U23I7
-set_global_assignment -name TOP_LEVEL_ENTITY pc_control_unit
+set_global_assignment -name TOP_LEVEL_ENTITY top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 21.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "22:28:57  OCTOBER 04, 2022"
 set_global_assignment -name LAST_QUARTUS_VERSION "21.1.0 Lite Edition"
@@ -78,9 +78,6 @@ set_location_assignment PIN_D8 -to ReadDataOut[4]
 set_location_assignment PIN_AH13 -to ReadDataOut[5]
 set_location_assignment PIN_AF7 -to ReadDataOut[6]
 set_location_assignment PIN_AH14 -to ReadDataOut[7]
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name EDA_TEST_BENCH_NAME TB_PC_CONTROL_UNIT -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id TB_PC_CONTROL_UNIT
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME TB_PC_CONTROL_UNIT -section_id TB_PC_CONTROL_UNIT
@@ -91,7 +88,6 @@ set_global_assignment -name EDA_TEST_BENCH_FILE TB_DMEM.sv -section_id TB_DMEM
 set_global_assignment -name EDA_TEST_BENCH_FILE data_mem_init.dat -section_id TB_DMEM
 set_global_assignment -name EDA_TEST_BENCH_FILE TB_ALU.sv -section_id TB_ALU
 set_global_assignment -name EDA_TEST_BENCH_FILE TB_PC_CONTROL_UNIT.sv -section_id TB_PC_CONTROL_UNIT
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name SYSTEMVERILOG_FILE instr_mem.sv
 set_global_assignment -name LICENSE_FILE inst_mem_init.dat
 set_global_assignment -name SYSTEMVERILOG_FILE data_mem.sv
@@ -119,3 +115,7 @@ set_global_assignment -name SYSTEMVERILOG_FILE TB_TOP.sv
 set_global_assignment -name SYSTEMVERILOG_FILE TB_DMEM.sv
 set_global_assignment -name SYSTEMVERILOG_FILE TB_ALU.sv
 set_global_assignment -name SYSTEMVERILOG_FILE TB_PC_CONTROL_UNIT.sv
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
